--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "3.11.0"
