--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-web": "~0.13.12",
-    "react-navigation": "3.11.0"
+    "react-navigation": "3.11.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
