--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "2.1.0",
     "expo": "~39.0.2",
+    "expo-image-picker": "~9.1.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^7.24.0",
     "firebase-admin": "^9.2.0",
@@ -18,6 +21,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-image-progress": "^1.1.1",
+    "react-native-progress": "^4.1.2",
+    "react-native-swipeout": "^2.3.6",
     "react-native-web": "~0.13.12",
     "react-navigation": "3.11.0",
     "react-redux": "^7.2.1",
